--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     const quizData = [
         {
             question: "What is the biggest Dinosaur?",
-            options: ["T-Rex", "Triceratops", "Patagotitan", "Giganotosaurus"],
+            options: ["T-Rex", "Triceratops", "Patagotitan mayorum", "Giganotosaurus"],
             answer: "Patagotitan mayorum"
         },
         {
