--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     const quizData = [
         {
             question: "What is the biggest Dinosaur?",
-            options: ["T-Rex", "Triceratops", "Patagotitan mayorum", "Giganotosaurus"],
-            answer: "Patagotitan mayorum"
+            options: ["T-Rex", "Triceratops", "Patagotitan", "Giganotosaurus"],
+            answer: "Patagotitan"
         },
         {
             question: "Which planet is known as the Red Planet?",
